Impose some personal style preferences and a few simplifications. Use Java 6 for now for consistency with main project.